--- a/index.html
+++ b/index.html
@@ -89,27 +89,27 @@
       <h2 class="about__title">Коротко о нас</h2>
       <div class="about__list">
         <div class="about__item">
-          <img src="img\icon-feature-1.svg" alt="цветок" />
+          <span  class="icon-feature-flower"></span>
           <p>Экологически чистые материалы</p>
         </div>
         <div class="about__item">
-          <img src="img\icon-feature-3.svg" alt="прямоугольник" />
+          <span  class="icon-feature-rectangle"></span>
           <p>Скандинавский стиль по российской цене</p>
         </div>
         <div class="about__item">
-          <img src="img\icon-feature-5.svg" alt="сердце" />
+          <span  class="icon-feature-heart"></span>
           <p>Увеличивает лайки на фотографиях</p>
         </div>
         <div class="about__item">
-          <img src="img\icon-feature-2.svg" alt="пряжа" />
+        <span  class="icon-feature-circle"></span>
           <p>Связано вручную с любовью и умилением</p>
         </div>
         <div class="about__item">
-          <img src="img\icon-feature-4.svg" alt="ракета" />
+          <span  class="icon-feature-missile"></span>
           <p>Поддержка отечественного производителя</p>
         </div>
         <div class="about__item">
-          <img src="img\icon-feature-6.svg" alt="подарок" />
+          <span  class="icon-feature-gift"></span>
           <p>Поставляется в подарочной упаковке</p>
         </div>
       </div>
@@ -141,12 +141,12 @@
           </tr>
           <tr>
             <td class="contacts__field">адрес:</td>
-            <td class="contacts__value">г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101</td>
+            <td class="contacts__value" width="150px">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
           </tr>
         </table>
       </div>
       <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424124077!2d30.32089461622911!3d59.93879686904776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1490171700855" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424124077!2d30.32089461622911!3d59.93879686904776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1490171700855" width="100%" height="457" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
       <a class="contacts__write-us" href="#">Напишите нам</a>
     </div>
