--- a/catalog.html
+++ b/catalog.html
@@ -65,7 +65,7 @@
       </div>
       <div class="catalog__item">
         <div class="catalog-item-image">
-          <img src="img/photo-2-mobile@1x.jpg" alt="фото товара" />
+          <img src="img/photo-2-mobile@1x.jpg" width="260" height="195"  alt="фото товара" />
         </div>
         <section class="item-content">
           <h3 class="item-content__title">Корзинка для белья</h3>
@@ -78,7 +78,7 @@
       </div>
       <div class="catalog__item">
         <div class="catalog-item-image">
-          <img src="img/photo-3-mobile@1x.jpg" alt="фото товара" />
+          <img src="img/photo-3-mobile@1x.jpg" width="260" height="195"  alt="фото товара" />
         </div>
         <section class="item-content">
           <h3 class="item-content__title">Большая корзинка для игрушек</h3>
