--- a/form.html
+++ b/form.html
@@ -44,10 +44,12 @@
     </div>
   </header>
   <div class="order-form">
-    <div class="order-form__title">
-      <h1>Вязание на заказ</h1>
+    <div class="order-form-header">
+      <div class="order-form-header__title">
+        <h1>Вязание на заказ</h1>
+      </div>
     </div>
-    <form action="https://echo.htmlacademy.ru/" method="post">
+    <form  action="https://echo.htmlacademy.ru/" method="post">
       <p class="order-form__description">
         Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
       </p>
