--- a/catalog.html
+++ b/catalog.html
@@ -52,20 +52,20 @@
     <div class="catalog">
       <div class="catalog__item">
         <div class="catalog-item-image">
-          <img src="img/photo-1-mobile@1x.jpg" alt="фото товара" />
+          <img src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="фото товара" />
         </div>
         <section class="item-content">
           <h3 class="item-content__title" >Зайчик-попрыгайчик</h3>
           <p>Рост 30 см, вес 200 г</p>
           <div class="catalog-item-footer">
-            <span class="catalog-item-footer__cost">1200 руб.</span>
+            <span class="catalog-item-footer__cost">1 200 руб.</span>
             <a class="catalog-item-footer__basket" href="#"></a>
           </div>
         </section>
       </div>
       <div class="catalog__item">
         <div class="catalog-item-image">
-          <img src="img/photo-2-mobile@1x.jpg" alt="фото товара" />
+          <img src="img/photo-2-mobile@1x.jpg" width="260" height="195"  alt="фото товара" />
         </div>
         <section class="item-content">
           <h3 class="item-content__title">Корзинка для белья</h3>
@@ -78,7 +78,7 @@
       </div>
       <div class="catalog__item">
         <div class="catalog-item-image">
-          <img src="img/photo-3-mobile@1x.jpg" alt="фото товара" />
+          <img src="img/photo-3-mobile@1x.jpg" width="260" height="195"  alt="фото товара" />
         </div>
         <section class="item-content">
           <h3 class="item-content__title">Большая корзинка для игрушек</h3>
@@ -117,7 +117,7 @@
           </span>
       </div>
       <div class="page-footer__copyright">
-        Разработано:
+        Разработано
         <a class=" btn page-footer__copyright-link" href=" https: //htmlacademy.ru/intensive/adaptive"></a>
       </div>
     </div>
