--- a/index.html
+++ b/index.html
@@ -115,21 +115,23 @@
       </div>
     </div>
     <div class="reviews">
-      <h2 class="reviews__title">Отзывы</h2>
-      <div class="reviews__list">
-        <div class="reviews__item">
-          <p>
-            Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
-          </p>
-          <span class="reviews__name-author">Анастасия Красильникова</span>
-          <span class="reviews__email-autor">@misssssiskras</span>
+      <div class="reviews-wrapper">
+        <h2 class="reviews__title">Отзывы</h2>
+        <div class="reviews__list">
+          <div class="reviews__item">
+            <p>
+              Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+            </p>
+            <span class="reviews__name-author">Анастасия Красильникова</span>
+            <span class="reviews__email-autor">@misssssiskras</span>
+          </div>
         </div>
+        <div class="control">
+          <button class=" reviews__prev" type=" button"></button>
+          <button class=" reviews__next" type=" button"></button>
+        </div>
+        <a class="reviews__write-reviws" href="#">Написать</a>
       </div>
-      <div class="control">
-        <button class=" reviews__prev" type=" button"></button>
-        <button class=" reviews__next" type=" button"></button>
-      </div>
-      <a class="reviews__write-reviws" href="#">Написать</a>
     </div>
     <div class="contacts clearfix">
       <div class="contacts__wrapper">
@@ -141,7 +143,7 @@
           </tr>
           <tr>
             <td class="contacts__field">адрес:</td>
-            <td class="contacts__value" width="150px">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
+            <td class="contacts__value" width="150px">г. Санкт-Петербург, ул.Большая Конюшенная, д.19/8, офис 101</td>
           </tr>
         </table>
       </div>
