index descktop pp

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li class="secondary-menu__item secondary-menu__item--search">
             <a href="#">
               <img class="icon-search" src="../img/icon-search.svg" alt="" />
-              Поиск по сайту
+              <span class="menu-text-none">Поиск по сайту</span>
             </a>
           </li>
           <li class="secondary-menu__item ">
@@ -139,7 +139,7 @@
         <table class="contacts__list">
           <tr>
             <td class="contacts__field">e-mail:</td>
-            <td class="contacts__value">info@mimimishkashop.ru</td>
+            <td class="contacts__value contacts__value--border">info@mimimishkashop.ru</td>
           </tr>
           <tr>
             <td class="contacts__field">адрес:</td>
