--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
   <header class="page-header">
     <div class="page-header__wrapper">
       <div class="logo">
-        <a href="index.html"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
+        <a href="#"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
       </div>
       <nav class="main-nav">
         <button class="main-nav-toggle" type="botton">X</button>
@@ -27,7 +27,7 @@
           <li class="secondary-menu__item secondary-menu__item--search">
             <a href="#">
               <img class="icon-search" src="../img/icon-search.svg" alt="" />
-              Поиск по сайту
+              <span class="menu-text-none">Поиск по сайту</span>
             </a>
           </li>
           <li class="secondary-menu__item ">
