--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
   <header class="page-header">
     <div class="page-header__wrapper">
       <div class="logo">
-        <a href="#"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
+        <a href="index.html"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
       </div>
       <nav class="main-nav">
         <button class="main-nav-toggle" type="botton">X</button>
