--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
   <header class="page-header">
     <div class="page-header__wrapper">
       <div class="logo">
-        <a href="#"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
+        <a href="index.html"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
       </div>
       <nav class="main-nav">
         <button class="main-nav-toggle" type="botton">X</button>
@@ -70,7 +70,7 @@
       </div>
       <div class="filter-color">
         <div class="filter-color__wrapper">
-          <div class="filter-type__header">
+          <div class="filter-type__header filter-type__header--padding-top">
             <span class="filter-color__title ">Цвет</span>
           </div>
           <div class="filter-color__list">
@@ -127,7 +127,7 @@
               <span class="user-contacts__title">тел</span>
             </div>
             <div class="user-phone__icon-phone">
-              <input class="user-info__input-value" type="tel" name="user-phone" id="tel" placeholder="+7 ХХХ ХХХ-ХХ-ХХ*" />
+              <input class="user-contacts__input-value" type="tel" name="user-phone" id="tel" placeholder="+7 ХХХ ХХ ХХ*" />
             </div>
           </div>
           <div class="user-contacts-item ">
