--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <table class="contacts__list">
           <tr>
             <td class="contacts__field">e-mail:</td>
-            <td class="contacts__value contacts__value--border">info@mimimishkashop.ru</td>
+            <td class="contacts__value contacts__value--condition">info@mimimishkashop.ru</td>
           </tr>
           <tr>
             <td class="contacts__field">адрес:</td>
