--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div class="logo">
         <a href="#"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
       </div>
-      <nav class="main-nav">
-        <button class="main-nav-toggle" type="botton">X</button>
+      <nav class="main-nav main-nav--closed">
+        <button class="main-nav-toggle" type="botton"></button>
         <ul class="main-nav__list">
           <li class="main-nav__item"><a href="catalog.html">Каталог товаров</a></li>
           <li class="main-nav__item"><a href="form.html">Вязание на заказ</a></li>
@@ -30,7 +30,7 @@
               <span class="menu-text-none">Поиск по сайту</span>
             </a>
           </li>
-          <li class="secondary-menu__item ">
+          <li class="secondary-menu__item">
             <a href="">
               <img class="icon-cart" src="../img/icon-cart.svg" alt="" />
               Корзина: <span>пока пуста</span>
