--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="page-header">
     <div class="page-header__wrapper">
-      <nav class="main-nav main-nav--opened">
+      <nav class="main-nav main-nav--closed">
         <button class="main-nav-toggle" type="botton"></button>
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--logo"><a class="main-nav__link" href="#"><picture>
