--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav class="main-nav main-nav--closed">
         <button class="main-nav-toggle" type="botton"></button>
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--logo"><a class="main-nav__link" href="#"><picture>
+          <li class="main-nav__item main-nav__item--logo"><a class="main-nav__link" href=""><picture>
                     <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
                     <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
                     <img src="img/logo-mobile.svg" alt="Mishka" height="35" width="86">
@@ -56,32 +56,35 @@
       </div>
     </div>
     <div class="featured">
-      <h2 class="featured__title">Вязаные корзинки</h2>
-      <p class="featured__product-week">Товар недели</p>
-      <div class="feature-product">
-        <p class="feature-product__description">
-          Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
-        </p>
-        <table class="feature-product__list">
-          <tr>
-            <td>Цвет:</td>
-            <td>«Тиффани»/серый</td>
-          </tr>
-          <tr>
-            <td>Диаметр:</td>
-            <td>25 см</td>
-          </tr>
-          <tr>
-            <td>Высота:</td>
-            <td>15 см</td>
-          </tr>
-        </table>
-        <div class="featured__image">
-          <img alt="изображение продукта" src="img\triple-set-mobile@1x.jpg" />
+      <div class="featured__wrapper">
+        <h2 class="featured__title">Вязаные корзинки</h2>
+        <p class="featured__product-week">Товар недели</p>
+        <div class="feature-product">
+          <p class="feature-product__description">
+            Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
+          </p>
+          <table class="feature-product__list">
+            <tr>
+              <td>Цвет:</td>
+              <td>«Тиффани»/серый</td>
+            </tr>
+            <tr>
+              <td>Диаметр:</td>
+              <td>25 см</td>
+            </tr>
+            <tr>
+              <td>Высота:</td>
+              <td>15 см</td>
+            </tr>
+          </table>
+          <div class="featured__image">
+            <img alt="изображение продукта" src="img\triple-set-mobile@1x.jpg" />
+          </div>
+          <span class="featured__price">Цена: 990 руб.</span>
+          <a class="featured__buy">Заказать</a>
         </div>
-        <span class="featured__price">Цена: 990 руб.</span>
-        <a class="featured__buy">Заказать</a>
       </div>
+      <div class="zigzag-line"></div>
     </div>
     <div class="about">
       <h2 class="about__title">Коротко о нас</h2>
@@ -130,6 +133,7 @@
         </div>
         <a class="reviews__write-reviws" href="#">Написать</a>
       </div>
+      <div class="zigzag-line"></div>
     </div>
     <div class="contacts clearfix">
       <div class="contacts__wrapper">
