--- a/form.html
+++ b/form.html
@@ -2,7 +2,8 @@
 <html lang="ru">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"0>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>HTML Academy: Мишка заказ</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
