no-js правка отступов , исправление ошибки автоматизации

--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>HTML Academy: Мишка каталог</title>
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -173,6 +173,7 @@
       </div>
     </div>
   </footer>
+  <script src="js/svgxuse.min.js"></script>
 </body>
 
 </html>
