--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="page-header">
     <div class="page-header__wrapper">
-      <nav class="main-nav main-nav--closed main-nav--nojs">
+      <nav class="main-nav main-nav--nojs main-nav--closed ">
         <button class="main-nav-toggle" type="botton"></button>
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--logo"><a class="main-nav__link" href="">
@@ -158,7 +158,7 @@
           </tr>
           <tr>
             <td class="contacts__field">адрес:</td>
-            <td class="contacts__value" width="150px">г. Санкт-Петербург, ул.Большая Конюшенная, д.19/8, офис 101</td>
+            <td class="contacts__value" >г. Санкт-Петербург, ул.Большая Конюшенная, д.19/8, офис 101</td>
           </tr>
         </table>
       </div>
@@ -215,15 +215,15 @@
       <form  action="https://echo.htmlacademy.ru/" method="post">
         <div class="popap__list">
           <div class="popap__item">
-            <input type="radio" class="popap-item-radio" id="size-s" checked name="radio-size" value="size-s">
+            <input type="radio" class="popap-item-radio" id="size-s" checked name="radio-size" value="size-s" />
             <label for="size-s" class="popap-item__text">S</lable>
           </div>
           <div class="popap__item">
-            <input type="radio" class="popap-item-radio" id="size-m" name="radio-size" value="size-m">
+            <input type="radio" class="popap-item-radio" id="size-m" name="radio-size" value="size-m" />
             <label for="size-m" class="popap-item__text">M</lable>
           </div>
           <div class="popap__item">
-            <input type="radio" class="popap-item-radio" id="size-l" name="radio-size" value="size-l">
+            <input type="radio" class="popap-item-radio" id="size-l" name="radio-size" value="size-l" />
             <label for="size-l" class="popap-item__text">L</lable>
           </div>
         </div>
