--- a/form.html
+++ b/form.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-  <meta charset="utf-8"0>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>HTML Academy: Мишка заказ</title>
   <link href="css/style.min.css" rel="stylesheet">
@@ -64,11 +64,11 @@
         <div class="filter-type__list">
           <div class="filter-type__item">
             <input type="radio" class="filter-type-radio" id="accessories-interior" checked name="filter-type-radio" value="check-accessories">
-            <label for="accessories-interior" class="filter-type__text">Аксессуар для интерьера</lable>
+            <label for="accessories-interior" class="filter-type__text">Аксессуар для интерьера</label>
           </div>
           <div class="filter-type__item">
             <input type="radio" id="children-toy" class="filter-type-radio" name="filter-type-radio" value="check-children-toy">
-            <label for="children-toy" class="filter-type__text">Детская игрушка</lable>
+            <label for="children-toy" class="filter-type__text">Детская игрушка</label>
           </div>
         </div>
       </div>
@@ -80,27 +80,27 @@
           <div class="filter-color__list">
             <div class="filter-color__item">
               <input type="checkbox" id="color-white" class="filter-type-checkbox" name="color-white" value="white" checked>
-              <label for="color-white">Белый</lable>
+              <label for="color-white">Белый</label>
             </div>
             <div class="filter-color__item">
               <input type="checkbox" id="color-grey" class="filter-type-checkbox" name="color-grey" value="grey" checked>
-              <label for="color-grey">Серый</lable>
+              <label for="color-grey">Серый</label>
             </div>
             <div class="filter-color__item">
               <input type="checkbox" id="color-tiffani" class="filter-type-checkbox" name="color-tiffani" value="tiffani" checked>
-              <label for="color-tiffani">«Тиффани»</lable>
+              <label for="color-tiffani">«Тиффани»</label>
             </div>
             <div class="filter-color__item">
               <input type="checkbox" id="color-black" class="filter-type-checkbox" name="black" value="black">
-              <label for="color-black">Черный</lable>
+              <label for="color-black">Черный</label>
             </div>
             <div class="filter-color__item">
               <input type="checkbox" id="color-pink" class="filter-type-checkbox" name="pink" value="pink">
-              <label for="color-pink">Розовый</lable>
+              <label for="color-pink">Розовый</label>
             </div>
             <div class="filter-color__item">
               <input type="checkbox" id="color-orange" class="filter-type-checkbox" name="orange" value="orange">
-              <label for="color-orange">Оранжевый</lable>
+              <label for="color-orange">Оранжевый</label>
             </div>
           </div>
         </div>
@@ -111,15 +111,15 @@
         </div>
         <div class="user-info__list">
           <div class="user-info-item">
-            <lable class="user-info__input-title" for="name">Имя:</lable>
+            <label class="user-info__input-title" for="name">Имя:</label>
             <input class="user-info__input-value" type="text" name="user-name" id="name" placeholder="Введите ваше имя*" />
           </div>
           <div class="user-info-item">
-            <lable class="user-info__input-title" for="surname">Фамилия:</lable>
+            <label class="user-info__input-title" for="surname">Фамилия:</label>
             <input class="user-info__input-value" type="text" name="user-surname" id="surname" placeholder="Укажите фамилию*" />
           </div>
           <div class="user-info-item">
-            <lable class="user-info__input-title" for="patronymic">Отчество:</lable>
+            <label class="user-info__input-title" for="patronymic">Отчество:</label>
             <input class="user-info__input-value" type="text" name="user-patronymic" id="patronymic" placeholder="Отчество, если желаете" />
           </div>
         </div>
@@ -142,7 +142,7 @@
               <span class="user-contacts__title">e-mail</span>
             </div>
             <div class="user-email">
-              <input class="user-contacts__input-value" type="email" name="user-email" id="email" placeholder="Ваш Email*" required="2222" />
+              <input class="user-contacts__input-value" type="email" name="user-email" id="email" placeholder="Ваш Email*" />
               <svg class="user-email__icon-email" width="32px" height="32px">
                 <use  xlink:href="img/symbols.svg#icon-mail"></use>
               </svg>
@@ -194,7 +194,7 @@
       </div>
       <div class="page-footer__copyright">
         Разработано:
-        <a class=" btn page-footer__copyright-link" href=" https: //htmlacademy.ru/intensive/adaptive">
+        <a class=" btn page-footer__copyright-link" href=" https://htmlacademy.ru/intensive/adaptive">
           <svg class="page-footer__logo-htmlacademy" width="26.943px" height="34.09px">
             <use  xlink:href="img/symbols.svg#logo-htmlacademy"></use>
           </svg>
