--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
             <picture>
               <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
-              <img alt="изображение продукта" src="img\triple-set-mobile@1x.jpg"
-              srcset="img\triple-set-mobile@2x.jpg 2x" height="636" width="525" \>
+              <img alt="изображение продукта" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" height="636" width="525" \>
             </picture>
           </div>
           <span class="featured__price">Цена: 990 руб.</span>
@@ -141,8 +140,8 @@
           </div>
         </div>
         <div class="control">
-          <button class=" reviews__prev" type=" button"></button>
-          <button class=" reviews__next" type=" button"></button>
+          <button class=" reviews__prev" type="button"></button>
+          <button class=" reviews__next" type="button"></button>
         </div>
         <a class="reviews__write-reviws" href="#">Написать</a>
       </div>
@@ -198,7 +197,7 @@
       </div>
       <div class="page-footer__copyright">
         Разработано:
-        <a class=" btn page-footer__copyright-link" href=" https: //htmlacademy.ru/intensive/adaptive">
+        <a class=" btn page-footer__copyright-link" href=" https://htmlacademy.ru/intensive/adaptive">
           <svg class="page-footer__logo-htmlacademy" width="26.943px" height="34.09px">
             <use  xlink:href="img/symbols.svg#logo-htmlacademy"></use>
           </svg>
@@ -216,15 +215,15 @@
         <div class="popap__list">
           <div class="popap__item">
             <input type="radio" class="popap-item-radio" id="size-s" checked name="radio-size" value="size-s" />
-            <label for="size-s" class="popap-item__text">S</lable>
+            <label for="size-s" class="popap-item__text">S</label>
           </div>
           <div class="popap__item">
             <input type="radio" class="popap-item-radio" id="size-m" name="radio-size" value="size-m" />
-            <label for="size-m" class="popap-item__text">M</lable>
+            <label for="size-m" class="popap-item__text">M</label>
           </div>
           <div class="popap__item">
             <input type="radio" class="popap-item-radio" id="size-l" name="radio-size" value="size-l" />
-            <label for="size-l" class="popap-item__text">L</lable>
+            <label for="size-l" class="popap-item__text">L</label>
           </div>
         </div>
         <button class="popap-add-size" type="submit">добавить</button>
