--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
   <header class="page-header">
     <div class="page-header__wrapper">
       <nav class="main-nav main-nav--closed">
-        <button class="main-nav-toggle" type="botton"></button>
+        <button class="main-nav-toggle" type="button"></button>
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--logo"><a class="main-nav__link" href="index.html">
             <picture>
@@ -26,7 +26,7 @@
           <li class="main-nav__item main-nav__item--sale"><a class="main-nav__link" href="#">Распродажа</a></li>
           <li class="main-nav__item main-nav__item--search">
             <a class="main-nav__link" href="#">
-              <svg class="main-nav__icon-search" width="17.6px" height="17.6px">
+              <svg class="main-nav__icon-search" width="17.6" height="17.6">
                 <use  xlink:href="img/symbols.svg#icon-search"></use>
               </svg>
               <span class="menu-text-none">Поиск по сайту</span>
@@ -34,7 +34,7 @@
           </li>
           <li class="main-nav__item main-nav__item--cart">
             <a class="main-nav__link" href="">
-              <svg class="main-nav__icon-cart" width="20.294px" height="18.849px">
+              <svg class="main-nav__icon-cart" width="20.294" height="18.849">
                 <use  xlink:href="img/symbols.svg#icon-cart"></use>
               </svg>
               Корзина: <span>пока пуста</span>
@@ -68,7 +68,7 @@
           <div class="catalog-item-footer">
             <span class="catalog-item-footer__cost">1 200 руб.</span>
             <a class="catalog-item-footer__basket" href="#">
-              <svg class="catalog-item-footer__cart" width="20.294px" height="18.849px">
+              <svg class="catalog-item-footer__cart" width="20.294" height="18.849">
                 <use  xlink:href="img/symbols.svg#icon-cart"></use>
               </svg>
             </a>
@@ -89,7 +89,7 @@
           <div class="catalog-item-footer">
             <span class="catalog-item-footer__cost">690 руб.</span>
             <a class="catalog-item-footer__basket" href="#">
-              <svg class="catalog-item-footer__cart" width="20.294px" height="18.849px">
+              <svg class="catalog-item-footer__cart" width="20.294" height="18.849">
                 <use  xlink:href="img/symbols.svg#icon-cart"></use>
               </svg>
             </a>
@@ -110,7 +110,7 @@
             <div class="catalog-item-footer">
               <span class="catalog-item-footer__cost">1 500 руб.</span>
               <a class="catalog-item-footer__basket" href="#">
-                <svg class="catalog-item-footer__cart" width="20.294px" height="18.849px">
+                <svg class="catalog-item-footer__cart" width="20.294" height="18.849">
                   <use  xlink:href="img/symbols.svg#icon-cart"></use>
                 </svg>
               </a>
@@ -139,7 +139,7 @@
     <div class="page-footer-wrapper">
       <div class="page-footer__logo">
         <a href="#">
-          <svg class="page-footer__logo" width="101.615px" height="34.056px">
+          <svg class="page-footer__logo" width="101.615" height="34.056">
             <use  xlink:href="img/symbols.svg#logo-footer"></use>
           </svg>
         </a>
@@ -147,17 +147,17 @@
       <div class="page-footer__social">
         <span class="social-links">
             <a class="social-links__instagram" href="">
-              <svg class="social__icon-insta" width="21.769px" height="21.334px">
+              <svg class="social__icon-insta" width="21.769" height="21.334">
                 <use  xlink:href="img/symbols.svg#icon-insta"></use>
               </svg>
             </a>
             <a class="social-links__fb" href="">
-              <svg class="social__icon-fb" width="14.962px" height="27.718px">
+              <svg class="social__icon-fb" width="14.962" height="27.718">
                 <use  xlink:href="img/symbols.svg#icon-fb"></use>
               </svg>
             </a>
             <a class="social-links__twitter" href="">
-              <svg class="social__icon-twitter" width="23.494px" height="20.168px">
+              <svg class="social__icon-twitter" width="23.494" height="20.168">
                 <use  xlink:href="img/symbols.svg#icon-twitter"></use>
               </svg>
             </a>
@@ -166,7 +166,7 @@
       <div class="page-footer__copyright">
         Разработано:
         <a class=" btn page-footer__copyright-link" href=" https://htmlacademy.ru/intensive/adaptive">
-          <svg class="page-footer__logo-htmlacademy" width="26.943px" height="34.09px">
+          <svg class="page-footer__logo-htmlacademy" width="26.943" height="34.09">
             <use  xlink:href="img/symbols.svg#logo-htmlacademy"></use>
           </svg>
         </a>
