--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="page-header">
     <div class="page-header__wrapper">
       <nav class="main-nav main-nav--nojs main-nav--closed ">
-        <button class="main-nav-toggle" type="botton"></button>
+        <button class="main-nav-toggle" type="button"></button>
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--logo"><a class="main-nav__link" href="">
             <picture>
@@ -26,7 +26,7 @@
           <li class="main-nav__item main-nav__item--sale"><a class="main-nav__link" href="#">Распродажа</a></li>
           <li class="main-nav__item main-nav__item--search">
             <a class="main-nav__link" href="#">
-              <svg class="main-nav__icon-search" width="17.6px" height="17.6px">
+              <svg class="main-nav__icon-search" width="17.6" height="17.6">
                 <use  xlink:href="img/symbols.svg#icon-search"></use>
               </svg>
               <span class="menu-text-none">Поиск по сайту</span>
@@ -34,7 +34,7 @@
           </li>
           <li class="main-nav__item main-nav__item--cart">
             <a class="main-nav__link" href="">
-              <svg class="main-nav__icon-cart" width="20.294px" height="18.849px">
+              <svg class="main-nav__icon-cart" width="20.294" height="18.849">
                 <use  xlink:href="img/symbols.svg#icon-cart"></use>
               </svg>
               Корзина: <span>пока пуста</span>
@@ -89,11 +89,11 @@
             <picture>
               <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
-              <img alt="изображение продукта" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" height="636" width="525" \>
+              <img alt="изображение продукта" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" height="636" width="525">
             </picture>
           </div>
           <span class="featured__price">Цена: 990 руб.</span>
-          <button class="featured__buy" id="buy" type="botton">Заказать</button>
+          <button class="featured__buy" id="buy" type="button">Заказать</button>
         </div>
       </div>
       <div class="zigzag-line"></div>
@@ -162,7 +162,7 @@
         </table>
       </div>
       <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424124077!2d30.32089461622911!3d59.93879686904776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1490171700855" width="100%" height="457" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424124077!2d30.32089461622911!3d59.93879686904776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1490171700855" style="border:0" allowfullscreen></iframe>
       </div>
       <a class="contacts__write-us" href="#">Напишите нам</a>
     </div>
@@ -171,7 +171,7 @@
     <div class="page-footer-wrapper">
       <div class="page-footer__logo">
         <a href="#">
-          <svg class="page-footer__logo" width="101.615px" height="34.056px">
+          <svg class="page-footer__logo" width="101.615" height="34.056">
             <use  xlink:href="img/symbols.svg#logo-footer"></use>
           </svg>
         </a>
@@ -179,17 +179,17 @@
       <div class="page-footer__social">
         <span class="social-links">
             <a class="social-links__instagram" href="">
-              <svg class="social__icon-insta" width="21.769px" height="21.334px">
+              <svg class="social__icon-insta" width="21.769" height="21.334">
                 <use  xlink:href="img/symbols.svg#icon-insta"></use>
               </svg>
             </a>
             <a class="social-links__fb" href="">
-              <svg class="social__icon-fb" width="14.962px" height="27.718px">
+              <svg class="social__icon-fb" width="14.962" height="27.718">
                 <use  xlink:href="img/symbols.svg#icon-fb"></use>
               </svg>
             </a>
             <a class="social-links__twitter" href="">
-              <svg class="social__icon-twitter" width="23.494px" height="20.168px">
+              <svg class="social__icon-twitter" width="23.494" height="20.168">
                 <use  xlink:href="img/symbols.svg#icon-twitter"></use>
               </svg>
             </a>
@@ -198,7 +198,7 @@
       <div class="page-footer__copyright">
         Разработано:
         <a class=" btn page-footer__copyright-link" href=" https://htmlacademy.ru/intensive/adaptive">
-          <svg class="page-footer__logo-htmlacademy" width="26.943px" height="34.09px">
+          <svg class="page-footer__logo-htmlacademy" width="26.943" height="34.09">
             <use  xlink:href="img/symbols.svg#logo-htmlacademy"></use>
           </svg>
         </a>
