--- a/index.html
+++ b/index.html
@@ -179,17 +179,17 @@
       </div>
       <div class="page-footer__social">
         <span class="social-links">
-            <a class="social-links__instagram" href="">
+            <a class="social-links__instagram" href="#">
               <svg class="social__icon-insta" width="21.769" height="21.334">
                 <use  xlink:href="#icon-insta"></use>
               </svg>
             </a>
-            <a class="social-links__fb" href="">
+            <a class="social-links__fb" href="#">
               <svg class="social__icon-fb" width="14.962" height="27.718">
                 <use  xlink:href="#icon-fb"></use>
               </svg>
             </a>
-            <a class="social-links__twitter" href="">
+            <a class="social-links__twitter" href="#">
               <svg class="social__icon-twitter" width="23.494" height="20.168">
                 <use  xlink:href="#icon-twitter"></use>
               </svg>
