--- a/form.html
+++ b/form.html
@@ -254,7 +254,7 @@
           </span>
       </div>
       <div class="page-footer__copyright">
-        Разработано:
+        Разработано
         <a class=" btn page-footer__copyright-link" href=" https://htmlacademy.ru/intensive/adaptive">
           <svg class="page-footer__logo-htmlacademy" width="26.943" height="34.09">
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use>
