--- a/form.html
+++ b/form.html
@@ -72,7 +72,7 @@
   </svg>
   <header class="page-header">
     <div class="page-header__wrapper">
-      <nav class="main-nav main-nav--closed">
+      <nav class="main-nav main-nav--nojs main-nav--closed ">
         <button class="main-nav-toggle" type="button"></button>
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--logo"><a class="main-nav__link" href="index.html">
@@ -236,25 +236,25 @@
       </div>
       <div class="page-footer__social">
         <span class="social-links">
-            <a class="social-links__instagram" href="">
+            <a class="social-links__instagram" href="#">
               <svg class="social__icon-insta" width="21.769" height="21.334">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-insta"></use>
+                <use xlink:href="#icon-insta"></use>
               </svg>
             </a>
-            <a class="social-links__fb" href="">
+            <a class="social-links__fb" href="#">
               <svg class="social__icon-fb" width="14.962" height="27.718">
-                <use  xlink:href="#icon-fb"></use>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-fb"></use>
               </svg>
             </a>
-            <a class="social-links__twitter" href="">
+            <a class="social-links__twitter" href="#">
               <svg class="social__icon-twitter" width="23.494" height="20.168">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"></use>
+                <use xlink:href="#icon-twitter"></use>
               </svg>
             </a>
           </span>
       </div>
       <div class="page-footer__copyright">
-        Разработано
+        Разработано:
         <a class=" btn page-footer__copyright-link" href=" https://htmlacademy.ru/intensive/adaptive">
           <svg class="page-footer__logo-htmlacademy" width="26.943" height="34.09">
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use>
@@ -263,6 +263,7 @@
       </div>
     </div>
   </footer>
+  <script src="js/main.js"></script>
   <script src="js/svgxuse.min.js"></script>
 </body>
 
